BIOLOGIA/app-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{service}#
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: "#{env}#"
    app.bancolombia.com.co/cost-center: "#{cost-center}#"
    app.bancolombia.com.co/application-code: "#{application-code}#"
    app.bancolombia.com.co/project: "#{project-name}#"
    app.bancolombia.com.co/pmo: "#{pmo}#"
spec:
  selector:
    app: #{project-name}#
    pod: #{service}#-pod
  ports:
    - name: http
      targetPort: #{container-port}#
      port: 80
---
### Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{service}#-deployment
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: "#{env}#"
    app.bancolombia.com.co/cost-center: "#{cost-center}#"
    app.bancolombia.com.co/application-code: "#{application-code}#"
    app.bancolombia.com.co/project: "#{project-name}#"
    app.bancolombia.com.co/pmo: "#{pmo}#"
spec:
  replicas: #{replicas}#
  selector:
    matchLabels:
      pod: #{service}#-pod
  template:
    metadata:
      labels:
        app: #{project-name}#
        pod: #{service}#-pod
        app.bancolombia.com.co/project: #{project-name}#
        version: #{version}#
    spec:
      securityContext:
        fsGroup: 65534
      serviceAccountName: #{service-account-name}#
      containers:
        - name: #{service}#-container
          image: #{image}#
          resources:
            requests:
              memory: "#{memory-request}#Mi"
              cpu: "#{cpu-request}#m"
            limits:
              memory: "#{memory-limits}#Mi"
              cpu: "#{cpu-limits}#m"
          ports:
            - containerPort: #{container-port}#
